--- a/scripts/NEON_data_grab.Rmd
+++ b/scripts/NEON_data_grab.Rmd
@@ -86,3 +86,22 @@ list2env((loadByProduct(dpID = fish,
          .GlobalEnv)
 ```
 
+```{r}
+#Benthic microbe community composition, DP1.20086.001
+
+benthic <- "DP1.20086.001"
+
+#Select sites and dates 
+my_sites <- c("BIGC", "TECR")
+start_date <- "2012-01"
+end_date <- "2022-12"
+
+#Pull
+list2env((loadByProduct(dpID = benthic, 
+                        site = my_sites, 
+                        include.provisional = FALSE,
+                        startdate = start_date,
+                        enddate = end_date)),
+         .GlobalEnv)
+```
+
