--- a/scripts/NEON_data_grab.Rmd
+++ b/scripts/NEON_data_grab.Rmd
@@ -100,6 +100,8 @@ list2env((loadByProduct(dpID = fish,
 ```{r}
 #Pull data from "Aquatic plants"
 plants <- "DP1.20072.001"
+
+#Select sites and dates
 my_sites <- c("BIGC", "TECR")
 start_date <- "2012-01"
 end_date <- "2022-12"
@@ -115,6 +117,8 @@ list2env((loadByProduct(dpID = plants,
 ```{r}
 #Benthic microbe community composition, DP1.20086.001
 benthic <- "DP1.20086.001"
+
+#Select sites and dates
 my_sites <- c("BIGC", "TECR")
 start_date <- "2012-01"
 end_date <- "2022-12"
