Created 2 csv for discharge data
Two different data files were saved as a csv for the data set concerning discharge. These files were saved within the "data" folder under the sub folder "raw"

--- a/scripts/NEON_data_grab.Rmd
+++ b/scripts/NEON_data_grab.Rmd
@@ -73,8 +73,8 @@ list2env((loadByProduct(dpID = discharge,
 variables_00130 %>% 
   write_csv(here("data", "raw", "variables_00130.csv"))
 
-csd_continuousDischarge %>% 
-  write_csv(here("data", "raw", "discharge_raw.csv"))
+csd_15_min %>% 
+  write_csv(here("data", "raw", "csd_15_min.csv"))
 
 ```
 
