--- a/scripts/NEON_data_grab.Rmd
+++ b/scripts/NEON_data_grab.Rmd
@@ -69,7 +69,7 @@ list2env((loadByProduct(dpID = discharge,
 ```
 
 ```{r}
-#Save raw data
+#Save raw data DONE
 variables_00130 %>% 
   write_csv(here("data", "raw", "variables_00130.csv"))
 
@@ -98,6 +98,16 @@ list2env((loadByProduct(dpID = fish,
 ```
 
 ```{r}
+#Save raw data
+variables_00130 %>% 
+  write_csv(here("data", "raw", "variables_00130.csv"))
+
+csd_15_min %>% 
+  write_csv(here("data", "raw", "csd_15_min.csv"))
+
+```
+
+```{r}
 #Pull data from "Aquatic plants"
 plants <- "DP1.20072.001"
 
@@ -115,8 +125,18 @@ list2env((loadByProduct(dpID = plants,
 ```
 
 ```{r}
+#Save raw data
+variables_00130 %>% 
+  write_csv(here("data", "raw", "variables_00130.csv"))
+
+csd_15_min %>% 
+  write_csv(here("data", "raw", "csd_15_min.csv"))
+
+```
+
+```{r}
 #Benthic microbe community composition, DP1.20086.001
-benthic <- "DP1.20086.001"
+benthic <- "DP1.20086.002"
 
 #Select sites and dates
 my_sites <- c("BIGC", "TECR")
@@ -131,3 +151,12 @@ list2env((loadByProduct(dpID = benthic,
          .GlobalEnv)
 ```
 
+```{r}
+#Save raw data
+variables_20086 %>% 
+  write_csv(here("data", "raw", "variables_20086.csv"))
+
+csd_15_min %>% 
+  write_csv(here("data", "raw", "csd_15_min.csv"))
+
+```
